Remove deprecation and unchecked warnings